# kumitateru

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build-macos.yaml  build-ubuntu.yml  build-windows.yaml  build.yaml  rust.yml
src/: ciq_sdk.rs  compile_project.rs  main.rs  prepare_build.rs  verify_project.rs
src/code_analyse/: consts.rs  mod.rs  prepare_for_analysis.rs
src/code_analyse/analyser/: device_specific.rs
src/code_analyse/syntax_checking/: mod.rs  syntax_check.rs
src/parsing/config/: app_config.rs
src/plugins/: mod.rs
src/ser_de/: mod.rs  parse_config.rs
src/ser_de/config/: app_config.rs  barrel_config.rs  mod.rs
src/ser_de/manifest/: manifest_utils.rs  mod.rs
src/utils/: arrow_selection.rs  config.rs  do_vectors_match.rs  fs_recursive_copy.rs  fs_utils.rs  manifest_utils.rs  mod.rs  verify_project.rs
src/utils/tui/: item_selection.rs  mod.rs  multiple_selection.rs
